manifests/analytixscrapy/templates/minio-dep.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /storage
        - --console-address=:9001
        ports:
        - containerPort: 9001
          hostPort: 9001
        volumeMounts:
          - name: minio-storage
            mountPath: "/storage"
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-data
