manifests/analytixscrapy/templates/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: scrapy
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: NodePort
